--- a/01_Servlet/src/main/webapp/ex04_response/client.html
+++ b/01_Servlet/src/main/webapp/ex04_response/client.html
@@ -5,6 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+	<form action="/01_Servlet/ResponseServlet" method="get">
+		<b>모델명</b> : <input type="text" name="model"><br>
+		<b>가 격</b> : <input type="text" name="price"><input type="submit" value="전송">
+	</form>
 </body>
 </html>
